[gd_scene load_steps=3 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_constants/separation = 30
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="DebugButton" type="Button" parent="."]
margin_right = 446.0
margin_bottom = 50.0
size_flags_horizontal = 0
text = "DebugLevelSelection"

[node name="PlayButton" type="Button" parent="."]
margin_top = 80.0
margin_right = 224.0
margin_bottom = 130.0
size_flags_horizontal = 0
text = "Play Game"

[node name="MuteMusicButton" type="Button" parent="."]
margin_top = 160.0
margin_right = 240.0
margin_bottom = 210.0
size_flags_horizontal = 0
text = "Mute Music"

[node name="ExitButton" type="Button" parent="."]
margin_top = 240.0
margin_right = 214.0
margin_bottom = 290.0
size_flags_horizontal = 0
text = "Exit Game"

[node name="ControlsMenu" type="Button" parent="."]
margin_top = 320.0
margin_right = 176.0
margin_bottom = 370.0
size_flags_horizontal = 0
text = "Controls"
[connection signal="pressed" from="DebugButton" to="." method="_on_DebugButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MuteMusicButton" to="." method="_on_MuteMusicButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ControlsMenu" to="." method="_on_ControlsMenu_pressed"]
